fix spacing around paragraphs and buttons

--- a/themes/ansible-community/sass/_homepage-automate-band.scss
+++ b/themes/ansible-community/sass/_homepage-automate-band.scss
@@ -1,6 +1,6 @@
 .homepage-automate-band {
   margin-top: 0;
-  padding-top: 1rem;
+  padding-top: 40px;
   padding-bottom: 1rem;
   background-color: $white;
 }
@@ -10,10 +10,14 @@
     font-family: $redhat-display;
     font-size: 1.2rem;
     font-weight: bold;
+    margin-top: 0;
+    margin-bottom: 0;
   }
   p {
     font-family: $redhat-display;
     font-size: 1rem;
     font-weight: normal;
+    margin-top: 24px;
+    margin-bottom: 24px;
   }
 }
