--- a/themes/ansible-community/sass/_homepage-section-title.scss
+++ b/themes/ansible-community/sass/_homepage-section-title.scss
@@ -10,6 +10,8 @@
     font-family: $redhat-display;
     font-size: 1rem;
     text-transform: none;
+    margin-top: 24px;
+    margin-bottom: 24px;
   }
 }
 
